# django_api

./: README.md  pyproject.toml
genre/: views.py
genre/migrations/: 0001_initial.py
project/: config.py  settings.py  urls.py
